added test state to pr verify workflow

--- a/.github/workflows/pull_request_verify.yml
+++ b/.github/workflows/pull_request_verify.yml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Build application
         run: go build main.go
+
+      - name: Test application
+        run: go test ./...
